@@ -10,26 +10,27 @@ import com.giftforyoube.user.dto.SignupRequestDto;
 import com.giftforyoube.user.service.GoogleService;
 import com.giftforyoube.user.service.KakaoService;
 import com.giftforyoube.user.service.UserService;
+import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.servlet.http.Cookie;
 import jakarta.servlet.http.HttpServletResponse;
 import jakarta.validation.Valid;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.core.Authentication;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.*;
 
 import java.io.UnsupportedEncodingException;
-import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 
 @Slf4j
 @RestController
 @RequestMapping("/api")
+@Tag(name = "유저", description = "유저 관련 API")
 public class UserController {
 
     private final UserService userService;
@@ -44,52 +45,81 @@ public class UserController {
 
     // 1. 일반 회원가입
     @PostMapping("/signup")
-    public ResponseEntity<BaseResponse<Void>> registerAccount(@Valid @RequestBody SignupRequestDto requestDto, BindingResult bindingResult) throws MethodArgumentNotValidException {
-        return userService.registerAccount(requestDto, bindingResult);
+    public ResponseEntity<BaseResponse<Void>> registerAccount(@Valid @RequestBody SignupRequestDto requestDto,
+                                                              BindingResult bindingResult) throws MethodArgumentNotValidException {
+        userService.registerAccount(requestDto, bindingResult);
+        return ResponseEntity.status(HttpStatus.CREATED)
+                .body(new BaseResponse<>(BaseResponseStatus.REGISTER_ACCOUNT_SUCCESS));
     }
 
     // 2. 일반 회원탈퇴
     @DeleteMapping("/delete")
-    public BaseResponse<Void> deleteAccount(@RequestBody DeleteRequestDto deleteRequestDto, Authentication authentication) {
-        UserDetailsImpl userDetails = (UserDetailsImpl) authentication.getPrincipal();
-        return userService.deleteAccount(userDetails.getUser().getId(), deleteRequestDto.getPassword());
+    public ResponseEntity<BaseResponse<Void>> deleteAccount(@Valid @RequestBody DeleteRequestDto deleteRequestDto,
+                                                            @AuthenticationPrincipal UserDetailsImpl userDetails) {
+        userService.deleteAccount(userDetails.getUser().getId(), deleteRequestDto.getPassword());
+        return ResponseEntity.status(HttpStatus.OK)
+                .body(new BaseResponse<>(BaseResponseStatus.DELETE_ACCOUNT_SUCCESS));
     }
 
-    // 3. Kakao 로그인
+    // 3-1. 카카오 로그인
     @GetMapping("/kakao/callback")
-    public ResponseEntity<BaseResponse<String>> kakaoLogin(@RequestParam String code, HttpServletResponse response) throws JsonProcessingException, URISyntaxException, UnsupportedEncodingException, MalformedURLException {
+    public ResponseEntity<String> kakaoLogin(@RequestParam String code,
+                                             HttpServletResponse httpServletResponse) throws JsonProcessingException, UnsupportedEncodingException, URISyntaxException {
         String kakaoToken = kakaoService.kakaoLogin(code);
-        log.info("[kakaoLogin] kakaoToken: " + kakaoToken);
-
         Cookie cookie = new Cookie(JwtUtil.AUTHORIZATION_HEADER, kakaoToken);
         cookie.setPath("/");
-        response.addCookie(cookie);
+        cookie.setHttpOnly(true);
+        cookie.setSecure(true);
+        httpServletResponse.addCookie(cookie);
 
-        BaseResponse<String> baseResponse = new BaseResponse<>(BaseResponseStatus.KAKAO_LOGIN_SUCCESS, kakaoToken);
-        return ResponseEntity.status(HttpStatus.FOUND) // 302
-                .location(new URL("https://www.giftipie.me/api").toURI())
-                .body(baseResponse); // 2000
+        HttpHeaders headers = new HttpHeaders();
+        headers.setLocation(new URI("https://www.giftipie.me/"));
+        return new ResponseEntity<>(headers, HttpStatus.FOUND);
     }
 
-    // 4. Google 로그인
+    // 3-2. 구글 로그인
     @GetMapping("/login/oauth2/code/google")
-    public ResponseEntity<BaseResponse<String>> googleLogin(@RequestParam String code, HttpServletResponse response) throws JsonProcessingException, URISyntaxException, UnsupportedEncodingException, MalformedURLException {
+    public ResponseEntity<String> googleLogin(@RequestParam String code,
+                                              HttpServletResponse httpServletResponse) throws JsonProcessingException, UnsupportedEncodingException, URISyntaxException {
         String googleToken = googleService.googleLogin(code);
-        log.info("[googleLogin] googleToken: " + googleToken);
-
         Cookie cookie = new Cookie(JwtUtil.AUTHORIZATION_HEADER, googleToken);
         cookie.setPath("/");
-        response.addCookie(cookie);
+        cookie.setHttpOnly(true);
+        cookie.setSecure(true);
+        httpServletResponse.addCookie(cookie);
 
-        BaseResponse<String> baseResponse = new BaseResponse<>(BaseResponseStatus.GOOGLE_LOGIN_SUCCESS, googleToken);
-        return ResponseEntity.status(HttpStatus.FOUND) // 302
-                .location(new URL("https://www.giftipie.me/api").toURI())
-                .body(baseResponse); // 2000
+        HttpHeaders headers = new HttpHeaders();
+        headers.setLocation(new URI("https://www.giftipie.me/"));
+        return new ResponseEntity<>(headers, HttpStatus.FOUND);
     }
 
-    // 5. 로그인 사용자 정보 조회(내부용)
-    @GetMapping("/user-info")
-    public void getUserInfo(@AuthenticationPrincipal UserDetailsImpl userDetails) {
-        userService.getUserInfo(userDetails);
-    }
+//    // 유저 테스트 시 적용 예정
+//    @GetMapping("/kakao/callback")
+//    public ResponseEntity<BaseResponse<String>> kakaoLogin(@RequestParam String code,
+//                                                           HttpServletResponse httpServletResponse) throws JsonProcessingException, UnsupportedEncodingException {
+//        String kakaoToken = kakaoService.kakaoLogin(code);
+//        Cookie cookie = new Cookie(JwtUtil.AUTHORIZATION_HEADER, kakaoToken);
+//        cookie.setPath("/");
+//        cookie.setHttpOnly(true);
+//        cookie.setSecure(true);
+//        httpServletResponse.addCookie(cookie);
+//
+//        BaseResponse<String> baseResponse = new BaseResponse<>(BaseResponseStatus.KAKAO_LOGIN_SUCCESS, kakaoToken);
+//        return ResponseEntity.status(HttpStatus.OK).body(baseResponse);
+//    }
+
+//    // 유저 테스트 시 적용 예정
+//    @GetMapping("/login/oauth2/code/google")
+//    public ResponseEntity<BaseResponse<String>> googleLogin(@RequestParam String code,
+//                                                            HttpServletResponse httpServletResponse) throws JsonProcessingException, UnsupportedEncodingException {
+//        String googleToken = googleService.googleLogin(code);
+//        Cookie cookie = new Cookie(JwtUtil.AUTHORIZATION_HEADER, googleToken);
+//        cookie.setPath("/");
+//        cookie.setHttpOnly(true);
+//        cookie.setSecure(true);
+//        httpServletResponse.addCookie(cookie);
+//
+//        BaseResponse<String> baseResponse = new BaseResponse<>(BaseResponseStatus.GOOGLE_LOGIN_SUCCESS, googleToken);
+//        return ResponseEntity.status(HttpStatus.OK).body(baseResponse);
+//    }
 }
